# julibu-backend

./: LICENSE  README.md
app/: manage.py  pyproject.toml
app/julibu_backend/: asgi.py  settings.py  urls.py  wsgi.py
app/playground/: views.py
